--- a/metricsui/package.json
+++ b/metricsui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -33,5 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://arcticthunder.azurewebsites.net"
+  "proxy": "https://arcticthunder.azurewebsites.net/api/"
 }
