--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://arcticthunder.azurewebsites.net:80/api",
+  "proxy": "https://at-metrics-api-stage.herokuapp.com/api/",
   "devDependencies": {
     "eslint-plugin-react-hooks": "^2.2.0"
   }
