--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
   },
   "devDependencies": {
     "eslint-plugin-react-hooks": "^2.2.0",
-    "proxy": "https://at-metrics-api-stage.herokuapp.com/api/",
-  },
+    "proxy": "https://at-metrics-api-stage.herokuapp.com/api/"
+  }
 }
