--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^2.2.0",
-    "proxy": "https://at-metrics-api-stage.herokuapp.com/api/"
+    "eslint-plugin-react-hooks": "^2.2.0"
   }
 }
