--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "repository": "https://rt941546@bitbucket.org/arcticthunder/dev-metricsui.git",
   "author": "Ryan Thally <rthally94@gmail.com>",
   "license": "MIT",
-  "dependencies": {
+  "engines": {
+    "node": "10.16.3"
+  }
+  "dependencies":{
     "@date-io/core": "^1.3.11",
     "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.5.1",
