--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "date-fns": "^2.7.0",
+    "file-loader": "^4.2.0",
     "http-proxy-middleware": "^0.20.0",
     "material-table": "^1.53.0",
     "react": "^16.10.2",
@@ -27,12 +30,13 @@
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
-    "serve": "^11.2.0"
+    "serve": "^11.2.0",
+    "url-loader": "^2.2.0"
   },
   "scripts": {
-    "dev": "webpack --env.API_URL=https://at-metrics-stage.herokuapp.com/api --config webpack.config.dev.js",
+    "dev": "webpack-dev-server --config webpack.config.dev.js",
     "start": "serve -s build",
-    "build": "webpack --config webpack.config.build.js",
+    "build": "webpack --config webpack.config.js --mode production",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
@@ -54,7 +58,9 @@
   },
   "devDependencies": {
     "eslint-plugin-react-hooks": "^2.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
